# gulcli

./: .gitignore  AGENTS.md  LICENSE  README.md  __init__.py  __main__.py  cli_bridge.py  compiler.py  confidence.py  decision.py  devlog.md  expr.py  facts.py  inference.py  integration.py  jurisdiction.py  policy.py  pyproject.toml  runtime_io.py  schema_validate.py
.github/workflows/: cpp-runtime-ci.yml  package-ci.yml  runtime-ci.yml
cpp/: CMakeLists.txt  README.md  csv_to_arrow.py  sample.conf
cpp/include/gul/: confidence.hpp  config.hpp  dataset.hpp  decision.hpp  entity.hpp  fact_environment.hpp  inference.hpp  json_io.hpp  jurisdiction.hpp  policy_expr.hpp  predicate.hpp  runtime_io.hpp  scenarios.hpp  spec_profile.hpp
cpp/scripts/: build-gul-exe.sh
cpp/src/: cli.cpp  confidence.cpp  config.cpp  dataset.cpp  decision.cpp  fact_environment.cpp  inference.cpp  json_io.cpp  jurisdiction.cpp  main.cpp  policy_expr.cpp  predicate.cpp  runtime_io.cpp  scenarios.cpp  spec_profile.cpp
docs/: PROJECT_UPDATES.md  runtime_usage.md
docs/release_notes/: RELEASE_SPEC_v2_2_0.md  v2.2.0.md
docs/superpowers/plans/: 2026-07-01-phase1-production-hardening.md
docs/superpowers/specs/: 2026-07-01-gulcli-roadmap-design.md  2026-07-10-gulcli-curriculum-expansion.md
examples/: python_runtime_usage.py
examples/facts/: basic_facts.json
examples/specs/: atom_role.gul.json  basic_infer.gul.json  jurisdiction_override.gul.json  temporal_always.gul.json
schemas/: gul.dataset.sample-1.json  gul.decision-1.json  gul.evaluated_decision-1.json  gul.inference.result-1.json  gul.policy.expr-1.json  gul.predicate-1.json  gul.validation.result-1.json
scripts/: GUL_CREATE_DATASET.txt
tests/: schema_validate.py  test_dataset_scenarios.py  test_facts.py  test_golden.py  test_native_parity.py  test_runtime_io.py  test_schemas.py  test_temporal.py
tests/golden/: README.md  basic_infer.infer.json  basic_infer.infer.trace.json  basic_infer.validate.json  jurisdiction_override.infer.json
