[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gulcli"
version = "2.1.0"
description = "Governed Uncertainty Logic — 4-valued policy decision algebra with confidence tracking and jurisdiction scoping"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
    "policy", "uncertainty", "logic", "governance",
    "formal-methods", "machine-learning", "inference",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/torakagemusha-sudo/gulcli"
Repository = "https://github.com/torakagemusha-sudo/gulcli"
Issues = "https://github.com/torakagemusha-sudo/gulcli/issues"

[tool.setuptools]
package-dir = {"gulcli" = "."}
packages = ["gulcli"]

[tool.setuptools.package-data]
gulcli = ["py.typed"]
