[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gulcli"
version = "2.2.0"
description = "Governed Uncertainty Logic — 4-valued policy decision algebra with confidence tracking and jurisdiction scoping"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "policy", "uncertainty", "logic", "governance",
    "formal-methods", "machine-learning", "inference",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]

[project.urls]
Homepage = "https://github.com/torakagemusha-sudo/gulcli"
Repository = "https://github.com/torakagemusha-sudo/gulcli"
Issues = "https://github.com/torakagemusha-sudo/gulcli/issues"

[tool.setuptools]
package-dir = {"gulcli" = "."}
packages = ["gulcli"]
# Bundled for CI schema tests (no separate PyPI package named schema_validate).
py-modules = ["schema_validate"]

[tool.setuptools.package-data]
gulcli = ["py.typed", "schemas/*.json"]
